# CAD_TO_URDF

./: .gitignore  README.md  environment.yml  pyproject.toml  ruff.toml
config/: materials.json
docs/superpowers/plans/: 2026-06-06-gui-mcp-server.md
docs/superpowers/specs/: 2026-06-06-gui-mcp-server-design.md  2026-06-13-joint-editor-origin-fields-design.md  2026-06-13-viewport-studio-styling-design.md
examples/iiwa14/iiwa14_description/: CMakeLists.txt  package.xml
examples/iiwa14/iiwa14_description/launch/: display.launch.py
examples/iiwa14/iiwa14_description/meshes/collision/: link_2.stl  link_5.stl
examples/iiwa14/iiwa14_description/meshes/visual/: link_0.stl  link_1.stl  link_3.stl  link_4.stl  link_6.stl  link_7.stl
examples/iiwa14/iiwa14_description/rviz/: display.rviz
examples/iiwa14/iiwa14_description/urdf/: iiwa14.urdf
examples/iiwa14/meshes/: link_0.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  link_7.stl
examples/two_cubes/two_cubes_description/: CMakeLists.txt  package.xml
examples/two_cubes/two_cubes_description/launch/: display.launch.py
examples/two_cubes/two_cubes_description/meshes/collision/: cube_a.stl
examples/two_cubes/two_cubes_description/rviz/: display.rviz
examples/two_cubes/two_cubes_description/urdf/: two_cubes.urdf
src/cad2urdf/: __init__.py
src/cad2urdf/cli/: main.py
src/cad2urdf/core/config/: loader.py
src/cad2urdf/core/extract/: mate_classify.py  spanning_tree.py  types.py
src/cad2urdf/core/inertia/: compute.py  materials.py
src/cad2urdf/core/kinematic/: model.py  tree.py  validate.py
src/cad2urdf/core/parsers/: obj.py  stl.py
src/cad2urdf/core/project/: save.py
src/cad2urdf/core/urdf/: emit.py  package.py
src/cad2urdf/core/validation/: manipulapy_gate.py
src/cad2urdf/gui/: __init__.py  app.py
src/cad2urdf/gui/control/: __init__.py  dispatcher.py  protocol.py  server.py
src/cad2urdf/gui/dialogs/: export_package.py  import_meshes.py
src/cad2urdf/gui/panels/: inertia_editor.py  joint_editor.py  link_tree.py
src/cad2urdf/gui/state/: controller.py  empty_robot.py
src/cad2urdf/gui/viewport/: axis_pick.py  pick.py  style.py  widget.py
src/cad2urdf/gui/windows/: main_window.py
src/cad2urdf/gui/workers/: base.py  export_package.py  import_meshes.py  recompute_inertia.py  validate.py
src/cad2urdf/mcp/: __init__.py  __main__.py  client.py  gui_process.py  server.py
tests/: conftest.py
tests/fixtures/joints/: two_cubes_stl.yaml
tests/gui/: conftest.py  test_app_control_flag.py  test_axis_pick.py  test_controller.py  test_core_no_qt_import.py  test_drag_reparent.py  test_e2e_smoke.py  test_export_dialog.py  test_import_dialog.py  test_import_worker.py  test_inertia_editor.py  test_joint_editor.py  test_link_tree.py  test_main_window.py  test_pick_to_select.py  test_project_io_menu.py  test_smoke.py  test_validate_worker.py  test_viewport.py  test_viewport_style.py  test_worker_base.py
tests/gui/control/: test_dispatcher_build.py  test_dispatcher_control.py  test_dispatcher_introspect.py  test_dispatcher_joint.py  test_dispatcher_project.py  test_server.py
tests/integration/: test_full_pipeline.py  test_mcp_e2e.py
tests/unit/: test_config_loader.py  test_extract_mate_classify.py  test_extract_spanning_tree.py  test_inertia_compute.py  test_inertia_materials.py  test_kinematic_fk.py  test_kinematic_tree.py  test_kinematic_validate.py  test_model_inertial.py  test_model_joint.py  test_model_link.py  test_model_robot.py  test_parser_obj.py  test_parser_stl.py  test_project_save.py  test_project_save_payload.py  test_smoke.py  test_tree_rename_reroot.py  test_urdf_emit.py  test_urdf_package.py  test_validation_manipulapy_gate.py
tests/unit/control/: test_protocol.py
tests/unit/mcp/: test_client.py  test_gui_process.py  test_packaging.py  test_server.py
