[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cad2urdf"
version = "0.1.0a0"
description = "Convert CAD assemblies (STEP/STL/OBJ) to ROS-ready URDF packages"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "boelnasr" }]
license = "MIT"
dependencies = [
    "numpy>=1.24,<3",
    "trimesh>=4.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
# manipulapy pulls in cupy/torch/ultralytics/pybullet (~6 GB). Phase 6 code that
# uses it (core/validation/manipulapy_gate.py, core/fixtures/manipulapy_robots.py)
# lazy-imports it inside function bodies so the default install stays small.
# Install as: pip install -e ".[dev,urdf-io]" when you need ManipulaPy validation.
urdf-io = [
    "manipulapy>=1.3.1",
]
gui = [
    "PyQt6>=6.6",
    "pyvistaqt>=0.11",
    "pyvista>=0.44",
    "vtk>=9.3",
]
dev = [
    "pytest>=8",
    "pytest-cov>=4",
    "pytest-qt>=4.4",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
cad2urdf = "cad2urdf.cli.main:main"
cad2urdf-gui = "cad2urdf.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "slow: long-running integration tests",
    "needs_step_fixture: requires generated STEP fixtures",
    "gui: requires Qt + pytest-qt (set QT_QPA_PLATFORM=offscreen in CI)",
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/cad2urdf/core"]
[[tool.mypy.overrides]]
module = ["trimesh.*", "OCC.*", "ManipulaPy.*"]
ignore_missing_imports = true
